Fix: Aligned the Col to Center when its mobile breakpoint in work section

--- a/src/components/Sections/Work.module.css
+++ b/src/components/Sections/Work.module.css
@@ -12,6 +12,13 @@
     padding-bottom: 20px;
 }
 
+@media only screen and (max-width: 650px) {
+    .work {
+        display: flex;
+        justify-content: center;
+    }
+  }
+
 .projectTitle {
     text-align: start;
 }
